--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,52 +1,41 @@
-name: CI Pipeline for Next.js + DockerHub
+name: Next.js CI
 
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
 
 jobs:
-  build-test-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          node-version: '18'
 
-      - name: Build Docker image (load locally)
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: false
-          load: true
-          tags: simple-room-app:temp
+      - name: Install dependencies
+        run: npm ci
 
-      - name: Run container from built image
+      - name: Set environment variables from GitHub Secrets
         run: |
-          docker run -d -p 3000:3000 --name room-app-test simple-room-app:temp
-          sleep 10
+          echo "NEXT_PUBLIC_SUPABASE_URL=${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}" >> $GITHUB_ENV
+          echo "NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}" >> $GITHUB_ENV
 
-      - name: Run tests inside Docker container
-        run: docker exec room-app-test npm run test
+      - name: Build Next.js app
+        run: npm run build
 
-      - name: Stop container
-        if: always()
-        run: docker stop room-app-test || true
+      - name: Check Next.js version
+        run: npx next --version
+        
+      - name: Log in to Azure Container Registry
+        run: echo "${{ secrets.AZURE_REGISTRY_PASSWORD }}" | docker login ${{ secrets.AZURE_REGISTRY_URL }} -u ${{ secrets.AZURE_REGISTRY_USERNAME }} --password-stdin
 
-      - name: Push image to Docker Hub (if tests passed)
-        if: success()
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: araykerja/simple-room-app:latest
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.AZURE_REGISTRY_URL }}/nextjs-app:latest .
+
+      - name: Push Docker image to ACR
+        run: docker push ${{ secrets.AZURE_REGISTRY_URL }}/nextjs-app:latest
