--- a/package.json
+++ b/package.json
@@ -1,1 +1,31 @@
-{"name":"simple-room-app","version":"0.1.0","private":true,"scripts":{"dev":"next dev --turbopack","build":"next build","start":"next start","lint":"next lint","test":"vitest run"},"dependencies":{"@supabase/supabase-js":"^2.49.8","lucide-react":"^0.511.0","next":"15.1.8","react":"^18.2.0","react-dom":"^18.2.0"},"devDependencies":{"@testing-library/jest-dom":"^6.4.2","@testing-library/react":"^14.2.2","@testing-library/user-event":"^14.6.0","@vitejs/plugin-react":"^4.2.1","eslint":"^8.57.0","eslint-config-next":"15.1.8","jsdom":"^24.0.0","postcss":"^8","tailwindcss":"^3.4.1","vitest":"^1.6.1"}}
+{
+  "name": "simple-room-app",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "jest"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.49.8",
+    "lucide-react": "^0.511.0",
+    "next": "15.1.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
+    "@testing-library/user-event": "^14.6.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jsdom": "^24.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "15.1.8",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
+  }
+}
