--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,8 +5,31 @@ on:
     branches: [main]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install test libraries
+        run: |
+          npm install --save-dev jest @testing-library/react @testing-library/jest-dom @testing-library/react-hooks
+
+      - name: Run tests
+        run: npm run test
+
   build:
     runs-on: ubuntu-latest
+    needs: test 
 
     steps:
       - name: Checkout repository
@@ -30,7 +53,7 @@ jobs:
 
       - name: Check Next.js version
         run: npx next --version
-        
+
       - name: Log in to Azure Container Registry
         run: echo "${{ secrets.AZURE_REGISTRY_PASSWORD }}" | docker login ${{ secrets.AZURE_REGISTRY_URL }} -u ${{ secrets.AZURE_REGISTRY_USERNAME }} --password-stdin
 
