--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,10 +20,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Install test libraries
-        run: |
-          npm install --save-dev jest @testing-library/react @testing-library/jest-dom @testing-library/react-hooks
-
+      - name: Install dev dependencies
+        run: npm install --save-dev jest @testing-library/react @testing-library/jest-dom @testing-library/react-hooks@8.1.1
+      
       - name: Run tests
         run: npm run test
 
