--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@testing-library/react": "^14.2.2",
     "@testing-library/user-event": "^14.6.0",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
-    "jsdom": "^24.0.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "15.1.8",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
+    "jsdom": "^24.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
