--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.2",
     "@testing-library/user-event": "^14.6.0",
+    "autoprefixer": "^10.4.16",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "15.1.8",
