--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.8",
+    "autoprefixer": "^10.4.21",
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
     "react": "^18.2.0",
