--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,58 +7,57 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          
       - name: Clean npm cache
         run: npm cache clean --force
-
       - name: Install dependencies
         run: npm ci
-
-     
       - name: Run tests
         run: npm run test
 
   build:
     runs-on: ubuntu-latest
-    needs: test 
-
+    needs: test
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-
       - name: Install dependencies
         run: npm ci
-
       - name: Set environment variables from GitHub Secrets
         run: |
           echo "NEXT_PUBLIC_SUPABASE_URL=${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}" >> $GITHUB_ENV
           echo "NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}" >> $GITHUB_ENV
-
       - name: Build Next.js app
         run: npm run build
-
       - name: Check Next.js version
         run: npx next --version
-
       - name: Log in to Azure Container Registry
         run: echo "${{ secrets.AZURE_REGISTRY_PASSWORD }}" | docker login ${{ secrets.AZURE_REGISTRY_URL }} -u ${{ secrets.AZURE_REGISTRY_USERNAME }} --password-stdin
-
       - name: Build Docker image
         run: docker build -t ${{ secrets.AZURE_REGISTRY_URL }}/nextjs-app:latest .
-
       - name: Push Docker image to ACR
         run: docker push ${{ secrets.AZURE_REGISTRY_URL }}/nextjs-app:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: roomreservation-app
+          slot-name: Production
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          images: '${{ secrets.AZURE_REGISTRY_URL }}/nextjs-app:latest'
