--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -29,7 +29,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-      
+      - name: Install dependencies
+        run: npm ci
       - name: Build Next.js app
         run: npm run build
       - name: Check Next.js version
